--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ############
 wp-config-local.php
 wp-cli.local.yml
+wp-content/uploads
 wp-content/blogs.dir/
 wp-content/upgrade/
 wp-content/backup-db/
@@ -56,4 +57,6 @@ Thumbs.db
 # SASS #
 ##########
 .sass-cache
+
+web/wp-content/uploads
 
